# ecosim

./: CMakeLists.txt
.devcontainer/: devcontainer.json
public/: index.html
src/: Board.cpp  Board.hpp  Carnivore.cpp  Carnivore.hpp  Entity.cpp  Entity.hpp  Herbivore.cpp  Herbivore.hpp  Movable.cpp  Movable.hpp  Plant.cpp  Plant.hpp  entity.h  main.cpp  position.h
src/Plants/: plants.cpp  plants.h
src/carnivores/: carnivores.cpp  carnivores.h
src/herbivores/: herbivores.cpp  herbivores.h
